--- a/roles/resolv.conf/templates/resolv.conf.j2
+++ b/roles/resolv.conf/templates/resolv.conf.j2
@@ -1,4 +1,3 @@
-search demo.intra
-nameserver 10.200.0.7
-nameserver 171.70.168.183
-nameserver 173.36.131.10
+search bitpass.com
+nameserver 192.168.51.129
+nameserver 8.8.8.8
